--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "start": "node index.js",
     "dev": "nodemon index.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "lint": "eslint .",
+    "test": "jest --verbose"
   },
   "repository": {
     "type": "git",
@@ -21,6 +22,7 @@
   "devDependencies": {
     "eslint": "^8.39.0",
     "eslint-plugin-react": "^7.32.2",
+    "jest": "^29.5.0",
     "nodemon": "^2.0.22"
   },
   "dependencies": {
@@ -28,5 +30,8 @@
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "mongoose": "^7.1.0"
+  },
+  "jest": {
+    "testEnvironment": "node"
   }
 }
